--- a/style/style_cont.css
+++ b/style/style_cont.css
@@ -29,6 +29,9 @@ nav li{
     background:rgba(199, 194, 194, 0.829);
     margin-bottom: 10px;
     border-radius: 5px;
+    list-style: none;
+    text-align: center;
+
     
     
 }
@@ -38,6 +41,10 @@ nav a {
     
  
     
+}
+
+select#flista{
+    width:120px;
 }
 
     
@@ -57,5 +64,11 @@ footer {
 @media (max-width: 425px){
     section  {
         width: 80%;
+    }
+}
+
+@media (max-width: 425px){
+    nav li {
+        width: 100px;
     }
 }
